[package]
name = "artis-derive-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
mysql = ["artis/mysql"]
sqlite = ["artis/sqlite"]
postgres = ["artis/postgres"]


[dependencies]
artis = { path = "../artis", features = ["mysql", "derive"] }
tokio = { version = "1.40.0", features = ["full"] }
rbatis = "4.6.7"
rbdc = "4.6.0"
serde = { version = "1.0.210", features = ["derive"] }
rbs = "4.6.0"
rbdc-sqlite = "4.6.0"
rbdc-mysql = "4.6.0"
log = "0.4.22"
dotenv = "0.15.0"
dotenv_config = "0.1.8"
env_logger = "0.10.0"
rbdc-pg = "4.5.16"
