[package]
name = "artis-device-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
mysql = ["artis/mysql"]
sqlite = ["artis/sqlite"]


[dependencies]
artis = { path = "../artis", features = ["mysql", "derive"] }
tokio = { version = "1.40.0", features = ["full"] }
rbatis = "4.5.21"
rbdc = "4.5.30"
rbs = "4.5.18"
serde = { version = "1.0.210", features = ["derive"] }
rbdc-sqlite = "4.5.5"
rbdc-mysql = "4.5.11"
