[package]
name = "artis"
version = "0.2.3"
authors = ["Yoruno xusir92@gamil.com"]
license = "MIT"
edition = "2021"
description = "Artis is a SQL library"
repository = "https://github.com/yenole/rs-artis"
keywords = ["artis", "rbatis", "sql", "sqlite", "mysql"]
readme = "../README.md"

[features]
default = ["derive"]
sqlite = []
mysql = []
derive = ["artis-derive"]

[dependencies]
artis-derive = { version = "0.1.0", optional = true }
rbatis = "4.5.30"
rbs = "4.5.18"
serde = { version = "1.0.210", features = ["derive"] }
